# xerces-utils

./: CMakeLists.Files.txt  CMakeLists.txt  Doxyfile  README.md
cmake/: AddExecutableFromLib.cmake  AddTestsToLibs.cmake  BoostDependency.cmake  FindBoost.cmake  FindOpenCv.cmake  FindTBB.cmake  IncludeAllModules.cmake  OpenCvDependency.cmake  QtDependency.cmake  TBBDependency.cmake
include/xmlutils/: dom_document.h  xerces_auto_ptr.h  xmlstring.h  xpath.h
src/: dom_document.cpp  xpath.cpp
tests/: t-sample.xml  t-xml.cpp
